--- a/s-seguro.html
+++ b/s-seguro.html
@@ -114,7 +114,7 @@
             <p>
               Según cuál sea su causa, las enfermedades profesionales pueden ser:
             </p>
-            <ul>
+            <ul class="ss-p1">
               <li><i class="bi bi-check-circle"> Enfermedades causadas por <span> agentes químicos</span></i> </li>
               <li><i class="bi bi-check-circle"> Enfermedades causadas por <span> agentes físcos</span></i> </li>
               <li><i class="bi bi-check-circle"> Enfermedades causadas por <span> agentes biológicos</span></i> </li>
@@ -124,7 +124,7 @@
             <p>
               Asimismo, las enfermedades a las que se enfrentan los trabajadores en su vida laboral, pueden ser:
             </p>
-            <ul>
+            <ul class="ss-p1">
               <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, ruidos, respirar humos o gases, ruido, alta o baja temperatura, daño en los ojos, etc.</i> </li>
               <li><i class="bi bi-check-circle"><span> Ergonómicos: </span> movimientos repetitivos, estar sentado en mala posición muchas horas seguidas, cargas pesadas.</i> </li>
               <li><i class="bi bi-check-circle"><span> Psicosociales: </span> exigencias emocionales, exigencias laborales, estrés, alto ritmo de trabajo, etc.</i> </li>
@@ -145,11 +145,10 @@
                 Entre las enfermedades osteomusculares más frecuentes están la tendinitis, dolor cervical y la lumbalgia.
             </p>
             <ul>
-              <li><i class="bi bi-chat-right-quote"></i>La tendinitis</li>
-              <p>Es la hinchazón o inflamación del tendón que une el músculo con el hueso. Puede ser el resultado de una lesión, sobrecarga o la edad, ya que el tendón va perdiendo elasticidad. Lo síntomas son dolor y sensibilidad en el tendón, generalmente cerca de alguna articulación. El dolor se acentúa durante la noche y con el movimiento o actividad.</p>
-              <li><i class="bi bi-chat-right-quote"></i>el dolor cervical</li>
+              <li><i class="bi bi-chat-right-quote"> La tendinitis</i></li><p>Es la hinchazón o inflamación del tendón que une el músculo con el hueso. Puede ser el resultado de una lesión, sobrecarga o la edad, ya que el tendón va perdiendo elasticidad. Lo síntomas son dolor y sensibilidad en el tendón, generalmente cerca de alguna articulación. El dolor se acentúa durante la noche y con el movimiento o actividad.</p>
+              <li><i class="bi bi-chat-right-quote"> El dolor cervical</i></li>
               <p>Se presenta, entre otros síntomas, los siguientes: Dolor y rigidez de cuello, Intensificación del dolor al mover el cuello, pérdida de la amplitud de movimiento en el cuello, dolor de cabeza que generalmente empieza en la base del cráneo, sensibilidad o dolor en los hombros, en la parte superior de la espalda o en los brazos, hormigueo o entumecimiento en los brazos, fatiga, entre otros.</p>
-              <li><i class="bi bi-chat-right-quote"></i>La lumbalgia</li>
+              <li><i class="bi bi-chat-right-quote"> La lumbalgia</i></li>
               <p>Es el dolor en la espalda baja causado por trastornos de las vértebras lumbares y las estructuras de los tejidos blandos y discos intervertebrales. Sus causas pueden ser varias, pero la más común es el estrés, el sobreesfuerzo físico y las malas posturas, por ejemplo, aquellas personas que su actividad laboral fue predominantemente frente a un escritorio.</p>
             </ul>
             <p>
