--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">juristas.especializados@outlook.com</a></i>
         </div>
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-phone d-flex align-items-center ms-4">
-            <div>
-              <span><a href="tel:+525581030007" class="contact-info-tel">55 8103 0007</a></span>
-              <span><a href="tel:+527226476912" class="contact-info-tel">72 2647 6912</a></span>
-            </div>
-          </i>
+          <i class="bi bi-telephone d-flex align-items-center ms-4"><a href="tel:+525581030007" class="contact-info-tel">55 8103 0007</a></i>
         </div>
       </div>
     </div>
@@ -104,7 +99,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span class="span-title">Nosotros<br></span>
         <h2>Nosotros<br></h2>
-        <p>Somos una firma de abogados especialistas con más de 25 años de experiencia en <span class="span-p">Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica</span>, cuyo objetivo fundamental es brindar a nuestros representados la protección más amplia de su patrimonio.</p>
+        <p>Somos una firma de abogados especialistas en <span class="span-p">Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica</span>, cuyo objetivo fundamental es brindar a nuestros representados la protección más amplia de su patrimonio.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -208,7 +203,7 @@
                 <img src="assets/img/dss.png" alt="">
               </div>
               <a href="s-seguro.html" class="stretched-link"><h3>Derecho de la Seguridad Social</h3></a>
-              <p>Tenemos una amplia experiencia de más de 25 años en tramitar demandas contra instituciones de Salud.</p>
+              <p>Tenemos una amplia experiencia en tramitar demandas contra instituciones de Salud.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-6 col-md-8" data-aos="fade-up" data-aos-delay="300">
@@ -283,8 +278,7 @@
             <div class="info-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone"></i>
               <h3>Telefono</h3>
-              <p>55 8103 0007</p>
-              <p>72 2647 6912</p>
+              <a href="tel:+525581030007" class="contact-info">55 8103 0007</a>
             </div>
           </div><!-- End Info Item -->
 
@@ -292,7 +286,7 @@
             <div class="info-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Correo Electronico</h3>
-              <p>juristas.especializados@outlook.com</p>
+              <a href="mailto:contact@example.com" class="contact-info">juristas.especializados@outlook.com</a>
             </div>
           </div><!-- End Info Item -->
 
