--- a/s-fiscal.html
+++ b/s-fiscal.html
@@ -47,7 +47,6 @@
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
               <span><a href="tel:+525581030007" class="contact-info-tel">55 8103 0007</a></span>
-              <span><a href="tel:+527226476912" class="contact-info-tel">72 2647 6912</a></span>
             </div>
           </i>
         </div>
@@ -152,7 +151,7 @@
               Una vez que la autoridad fiscal determina un crédito fiscal a cargo de un contribuyente, éste puede defenderse. Tramitamos los medios de defensa acompañados de una estrategia integral apegada a derecho que proteja su patrimonio y su negocio.
             </p>
             <p>
-                En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span>, contamos con profesionales especializados en derecho fiscal, con más de 25 años de experiencia para tramitar a su favor.
+                En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span>, contamos con profesionales especializados en derecho fiscal, con experiencia para tramitar a su favor.
             </p>
             <h4>SEDE ADMINISTRATIVA</h4>
             <ul>
