--- a/s-seguro.html
+++ b/s-seguro.html
@@ -47,7 +47,6 @@
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
               <span><a href="tel:+525581030007" class="contact-info-tel">55 8103 0007</a></span>
-              <span><a href="tel:+527226476912" class="contact-info-tel">72 2647 6912</a></span>
             </div>
           </i>
         </div>
@@ -183,7 +182,7 @@
               Las causas de las enfermedades profesionales están relacionadas directamente con la actividad que desarrolla el trabajador a nivel laboral. 
             </p>
             <p>
-                En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span>, tenemos una amplia experiencia de más de 25 años en tramitar demandas contra instituciones como el IMSS, enfocándonos en asegurar que todos los derechos y beneficios de nuestros clientes sean reconocidos y otorgados.
+                En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span>, tenemos una amplia experiencia en tramitar demandas contra instituciones como el IMSS, enfocándonos en asegurar que todos los derechos y beneficios de nuestros clientes sean reconocidos y otorgados.
             </p>
             <p>
                 Ofrecemos una defensa especializada en litigios relacionados con la Seguridad Social, asegurando una representación rigurosa y exhaustiva para cada caso. 
