--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
             <h3>El Abogado Anuar Gustavo García Aguilar</h3>
-            <h4>Es el socio fundador de la Firma</h4>
+            <h4>Es el socio fundador de la Firma.</h4>
             <!-- <p class="fst-italic">
               Socio fundador
             </p> -->
@@ -145,7 +145,7 @@
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <h3>Vision</h3>
+              <h3>Visión</h3>
               <p>Nuestra visión es seguir siendo un despacho de abogados especialistas en Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica, para ofrecer a nuestros representados beneficios patrimoniales a través de soluciones concretas a sus problemas específicos.</p>
             </div>
           </div><!-- End Service Item -->
@@ -221,7 +221,7 @@
                 <img src="assets/img/dnm.png" alt="">
               </div>
               <a href="s-medico.html" class="stretched-link"><h3>Negligencia Médica</h3></a>
-              <p>La negligencia cometida por profesionales de la salud en los hospitales, puede tener consecuencias en el paciente o incluso su muerte</p>
+              <p>La negligencia cometida por profesionales de la salud en los hospitales, puede tener consecuencias en el paciente o incluso su muerte.</p>
             </div>
           </div><!-- End Service Item -->
         </div>
