--- a/s-laboral.html
+++ b/s-laboral.html
@@ -114,7 +114,7 @@
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Despido</span></li>
-              <p>Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span> Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de salario, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
+              <p>Es cuando de manera unilateral el patrón termina la relación laboral. Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de salario, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
               <br>
               <p>En caso de ir a juicio con motivo de un despido injustificado, usted tiene derecho a recibir el pago de los salarios que hubiera percibido desde el despido y hasta por un plazo de doce meses posteriores.</p>
               <p>Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio.</p>
@@ -130,7 +130,8 @@
               <p>En caso de que el patrón incumpla con las mismas, el trabajador tendrá derecho a rescindir la relación laboral de manera justificada, por lo que tendrá derecho a ser indemnizado como si hubiera sido objeto de un despido injustificado.</p>
               <li><i class="bi bi-check-circle"></i> <span>Acoso Laboral</span></li>
               <p>También llamado <span>mobbing</span>, es cuando de manera sistemática <span>un trabajador es objeto de molestia o intimidación</span> por parte de su patrón o de sus compañeros a través de acciones tendientes a buscar su renuncia.</p>
-              <p>En el primero de los casos, se actualizan las causales para terminar la relación de trabajo sin responsabilidad para el trabajador y este podrá demandar solicitando una indemnización igual a la que recibiría si fuese despedido de manera injustificada.</p>
+              <p>En el primero de los casos, se actualizan las causales para terminar la relación de trabajo sin responsabilidad para el trabajador y este podrá demandar solicitando una indemnización igual a la que recibiría si fuese 
+                 de manera injustificada.</p>
               <p>Ahora que, si el acoso fuera por parte de sus compañeros, el trabajador podrá terminar la relación laboral y demandar su liquidación laboral o bien exigir una indemnización por daños y perjuicios.</p>
               <p>Esto porque, aunque podría parecer que esto no es responsabilidad del patrón, la Ley Federal del Trabajo establece que es obligación de este el mantener un ambiente de trabajo sano en el centro de trabajo.</p>
             </ul>
