--- a/s-seguro.html
+++ b/s-seguro.html
@@ -124,12 +124,12 @@
               Asimismo, las enfermedades a las que se enfrentan los trabajadores en su vida laboral, pueden ser:
             </p>
             <ul class="ss-p1">
-              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, ruidos, respirar humos o gases, ruido, alta o baja temperatura, daño en los ojos, etc.</i> </li>
+              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, respirar humos o gases, ruido, alta o baja temperatura, daño en los ojos, etc.</i> </li>
               <li><i class="bi bi-check-circle"><span> Ergonómicos: </span> movimientos repetitivos, estar sentado en mala posición muchas horas seguidas, cargas pesadas.</i> </li>
               <li><i class="bi bi-check-circle"><span> Psicosociales: </span> exigencias emocionales, exigencias laborales, estrés, alto ritmo de trabajo, etc.</i> </li>
             </ul>
             <p>
-              Síntoma de enfermedades profesionales:
+              Síntomas de enfermedades profesionales:
             </p>
             <p>
               Los síntomas de las enfermedades profesionales pueden ser <span>físicos o psicológicos</span>, según la causa de la lesión.
@@ -146,7 +146,7 @@
             <ul>
               <li><i class="bi bi-chat-right-quote"> La tendinitis</i></li><p>Es la hinchazón o inflamación del tendón que une el músculo con el hueso. Puede ser el resultado de una lesión, sobrecarga o la edad, ya que el tendón va perdiendo elasticidad. Lo síntomas son dolor y sensibilidad en el tendón, generalmente cerca de alguna articulación. El dolor se acentúa durante la noche y con el movimiento o actividad.</p>
               <li><i class="bi bi-chat-right-quote"> El dolor cervical</i></li>
-              <p>Se presenta, entre otros síntomas, los siguientes: Dolor y rigidez de cuello, Intensificación del dolor al mover el cuello, pérdida de la amplitud de movimiento en el cuello, dolor de cabeza que generalmente empieza en la base del cráneo, sensibilidad o dolor en los hombros, en la parte superior de la espalda o en los brazos, hormigueo o entumecimiento en los brazos, fatiga, entre otros.</p>
+              <p>Se presentan, entre otros síntomas, los siguientes: Dolor y rigidez de cuello, Intensificación del dolor al mover el cuello, pérdida de la amplitud de movimiento en el cuello, dolor de cabeza que generalmente empieza en la base del cráneo, sensibilidad o dolor en los hombros, en la parte superior de la espalda o en los brazos, hormigueo o entumecimiento en los brazos, fatiga, entre otros.</p>
               <li><i class="bi bi-chat-right-quote"> La lumbalgia</i></li>
               <p>Es el dolor en la espalda baja causado por trastornos de las vértebras lumbares y las estructuras de los tejidos blandos y discos intervertebrales. Sus causas pueden ser varias, pero la más común es el estrés, el sobreesfuerzo físico y las malas posturas, por ejemplo, aquellas personas que su actividad laboral fue predominantemente frente a un escritorio.</p>
             </ul>
@@ -162,14 +162,6 @@
             <p>
               En casos de patologías más graves, como el cáncer, es la exposición a tóxicos una de las principales causas.
             </p>
-            <p>
-              Nuestra Firma de Abogados, se especializa en demostrar la procedencia de enfermedades profesionales y obtener para el TRABAJADOR ACTIVO O JUBILADO, una pensión por riesgo de trabajo.
-            </p>
-            <br>
-            <p>
-              No obstante que el reclamante sea jubilado por años de servicios, esto no impide que tenga derecho al pago de una pensión adicional a su jubilación, pues basta con que el estado patológico que presenta tenga su origen en el trabajo desempeñado, independientemente de que al determinarse el grado de incapacidad se encuentre laborando o no.
-            </p>
-
             <h4>Representación Júridica</h4>
             <p>
               Nuestra Firma de Abogados, se especializa en demostrar la procedencia de enfermedades profesionales y obtener para el <span>TRABAJADOR ACTIVO O JUBILADO</span>, una pensión por riesgo de trabajo.
@@ -177,7 +169,7 @@
             <p>
                 No obstante que el reclamante sea jubilado por años de servicios, esto no impide que tenga derecho al pago de una pensión adicional a su jubilación, pues basta con que el estado patológico que presenta tenga su origen en el trabajo desempeñado, independientemente de que al determinarse el grado de incapacidad se encuentre laborando o no.
             </p>
-            <h4>¿Cuáles son las causas de las Enfermedades Profecionales?</h4>
+            <h4>¿Cuáles son las causas de las Enfermedades Profesionales?</h4>
             <p>
               Las causas de las enfermedades profesionales están relacionadas directamente con la actividad que desarrolla el trabajador a nivel laboral. 
             </p>
@@ -221,7 +213,7 @@
               <li><i class="bi bi-chat-right-quote"></i>Dificultades económicas debido a la falta de beneficios.</li>
               <li><i class="bi bi-chat-right-quote"></i>Estrés y ansiedad causados por la incertidumbre y la lucha por los derechos que le han sido negados.</li>
             </ul>
-            <h4>Necesidades de contar con un Abogado Especialista en Seguridad Social</h4>
+            <h4>Necesidad de contar con un Abogado Especialista en Seguridad Social</h4>
             <p>
               Los litigios de pensiones de seguridad social son cruciales porque afectan directamente el bienestar y la estabilidad de las personas y sus familias.
             </p>
@@ -262,7 +254,7 @@
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cómo puedo demandar al IMSS?</summary>
-                      <p class="p-faq">Si usted enfrenta a una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
+                      <p class="p-faq">Si usted enfrenta una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
                       <p class="p-faq">Aquí le explicamos cómo proceder:</p>
                       <p class="p-faq"> <span>1.</span> Contáctenos para recibir asesoría de un abogado especializado en derecho de la seguridad social.</p>
                       <p class="p-faq"> <span>2.</span> De ser necesario el siguiente paso sería presentar una demanda ante un tribunal competente.</p>
@@ -272,7 +264,7 @@
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
-                      <summary>¿Qué puedo hacer si el IMSS no tiene las medicinas que necesito?</summary>
+                      <summary>¿Si el IMSS no tiene las medicinas que necesito?</summary>
                       <p class="p-faq">En México si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
                       <p class="p-faq">Esto es especialmente conveniente si no tiene los recursos para comprarlos por su cuenta. </p>
                       <p class="p-faq">El amparo es un recurso legal diseñado para proteger los derechos constitucionales de los ciudadanos cuando consideran que una autoridad está violando esos derechos.</p>
@@ -287,7 +279,8 @@
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son mis derechos bajo el sistema de seguridad social?</summary>
-                      <p class="p-faq">Contratar a un abogado especialista en seguridad social es importante debido a la complejidad de las leyes y procedimientos que regulan los beneficios. Un abogado navegará eficazmente el sistema, asegurando el cumplimiento de los requisitos legales y aumentando las oportunidades de obtener los beneficios adecuados. Adicionalmente, un abogado evitará errores y en caso de requerirse podrá identificar y resolver rápidamente cualquier problema que se presente y de ser necesario accionar apelaciones o demandas para proteger los derechos de los clientes.</p>
+                      <p class="p-faq">Los derechos de quines pertenecen al sistema de seguridad social en México incluyen acceso a atención médica, pensiones por vejez, invalidez, y riesgos de trabajo, así como  prestaciones por maternidad y otros beneficios familiares.</p>
+                      <p>Estos derechos están garantizadfos por el IMSS e ISSSTE para trabajadores del sector privado y público, respectivamente</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
