--- a/s-seguro.html
+++ b/s-seguro.html
@@ -124,7 +124,7 @@
               Asimismo, las enfermedades a las que se enfrentan los trabajadores en su vida laboral, pueden ser:
             </p>
             <ul class="ss-p1">
-              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, respirar humos o gases, ruido, alta o baja temperatura, daño en los ojos, etc.</i> </li>
+              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, respirar humos o gases, alta o baja temperatura, daño en los ojos, etc.</i> </li>
               <li><i class="bi bi-check-circle"><span> Ergonómicos: </span> movimientos repetitivos, estar sentado en mala posición muchas horas seguidas, cargas pesadas.</i> </li>
               <li><i class="bi bi-check-circle"><span> Psicosociales: </span> exigencias emocionales, exigencias laborales, estrés, alto ritmo de trabajo, etc.</i> </li>
             </ul>
