--- a/s-seguro.html
+++ b/s-seguro.html
@@ -264,8 +264,8 @@
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
-                      <summary>¿Si el IMSS no tiene las medicinas que necesito?</summary>
-                      <p class="p-faq">En México si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
+                      <summary>¿Qué puedo hacer si el IMSS no tiene las medicinas que necesito?</summary>
+                      <p class="p-faq">Si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
                       <p class="p-faq">Esto es especialmente conveniente si no tiene los recursos para comprarlos por su cuenta. </p>
                       <p class="p-faq">El amparo es un recurso legal diseñado para proteger los derechos constitucionales de los ciudadanos cuando consideran que una autoridad está violando esos derechos.</p>
                   </details>
