--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
       </div>
-
     </div>
 
   </header>
@@ -247,22 +246,16 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
-
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="span-title">Contacto</span>
         <h2>Contacto</h2>
         <p>Atendemos a nuestros representandos en toda la República Mexicana de forma presencial o a través de ZOOM.</p>
         <br>
         <p>Le pedimos por favor, agendar previamente una cita, para atenderlo como Usted se merece.</p>
-      </div><!-- End Section Title -->
-
+      </div>
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row gy-4">
-
           <div class="col-lg-6">
-            <!-- <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200"> -->
             <div class="info-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
               <h3>Atención en:</h3>
@@ -272,65 +265,51 @@
               <br>
               <p>Emerson 141-B, 3º Piso, Polanco V Sección; C.P. 11560, Alcaldía Miguel Hidalgo, Ciudad de México.</p>
             </div>
-          </div><!-- End Info Item -->
-
+          </div>
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone"></i>
               <h3>Telefono</h3>
               <a href="tel:+525581030007" class="contact-info">55 8103 0007</a>
             </div>
-          </div><!-- End Info Item -->
-
+          </div>
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Correo Electronico</h3>
               <a href="mailto:contact@example.com" class="contact-info">juristas.especializados@outlook.com</a>
             </div>
-          </div><!-- End Info Item -->
-
+          </div>
         </div>
-
         <div class="row gy-4 mt-1">
-          
           <div class="col-lg-12">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
               <div class="row gy-4">
-
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Su nombre" required="">
                 </div>
-
                 <div class="col-md-6 ">
                   <input type="email" class="form-control" name="email" placeholder="Su correo electronico" required="">
                 </div>
-
                 <div class="col-md-12">
                   <input type="text" class="form-control" name="subject" placeholder="Area de practica" required="">
                 </div>
-
                 <div class="col-md-12">
                   <textarea class="form-control" name="message" rows="6" placeholder="Su mensaje" required=""></textarea>
                 </div>
-
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading...</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Tu mensaje ha sido enviado. ¡Gracias!</div>
-
                   <button type="submit">Enviar mensaje</button>
                 </div>
-
               </div>
             </form>
-          </div><!-- End Contact Form -->
-
+          </div>
         </div>
-
       </div>
-
-    </section><!-- /Contact Section -->
+    </section>
+    <!-- Contact Section -->
 
   </main>
 
