--- a/s-fiscal.html
+++ b/s-fiscal.html
@@ -151,7 +151,7 @@
               Una vez que la autoridad fiscal determina un crédito fiscal a cargo de un contribuyente, éste puede defenderse. Tramitamos los medios de defensa acompañados de una estrategia integral apegada a derecho que proteja su patrimonio y su negocio.
             </p>
             <p>
-                Contamos con profesionales especializados en <span>Derecho Fiscal</span> con amplia experiencia para tramitar una defensa adecuada y oportunidad a su favor
+                Contamos con profesionales especializados en <span>Derecho Fiscal</span> con amplia experiencia para tramitar una defensa adecuada y oportuna a su favor
             </p>
             <h4>SEDE ADMINISTRATIVA</h4>
             <ul>
