--- a/s-seguro.html
+++ b/s-seguro.html
@@ -124,7 +124,7 @@
               Asimismo, las enfermedades a las que se enfrentan los trabajadores en su vida laboral, pueden ser:
             </p>
             <ul class="ss-p1">
-              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, respirar humos o gases, alta o baja temperatura, daño en los ojos, etc.</i> </li>
+              <li><i class="bi bi-check-circle"><span> Físicos: </span> vibraciones producidas por herramientas, ruidos, respirar humos o gases, alta o baja temperatura, daño en los ojos, etc.</i> </li>
               <li><i class="bi bi-check-circle"><span> Ergonómicos: </span> movimientos repetitivos, estar sentado en mala posición muchas horas seguidas, cargas pesadas.</i> </li>
               <li><i class="bi bi-check-circle"><span> Psicosociales: </span> exigencias emocionales, exigencias laborales, estrés, alto ritmo de trabajo, etc.</i> </li>
             </ul>
@@ -264,7 +264,7 @@
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
-                      <summary>¿Qué puedo hacer si el IMSS no tiene las medicinas que necesito?</summary>
+                      <summary>¿Que puedo hacer si el IMSS no tiene las medicinas que necesito?</summary>
                       <p class="p-faq">Si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
                       <p class="p-faq">Esto es especialmente conveniente si no tiene los recursos para comprarlos por su cuenta. </p>
                       <p class="p-faq">El amparo es un recurso legal diseñado para proteger los derechos constitucionales de los ciudadanos cuando consideran que una autoridad está violando esos derechos.</p>
@@ -280,7 +280,7 @@
                   <details>
                       <summary>¿Cuáles son mis derechos bajo el sistema de seguridad social?</summary>
                       <p class="p-faq">Los derechos de quienes pertenecen al sistema de seguridad social en México incluyen acceso a atención médica, pensiones por vejez, invalidez, y riesgos de trabajo, así como  prestaciones por maternidad y otros beneficios familiares.</p>
-                      <p>Estos derechos están garantizadfos por el IMSS e ISSSTE para trabajadores del sector privado y público, respectivamente</p>
+                      <p class="p-faq">Estos derechos están garantizados por el IMSS e ISSSTE para trabajadores del sector privado y público, respectivamente</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
