--- a/s-seguro.html
+++ b/s-seguro.html
@@ -280,7 +280,7 @@
                   <details>
                       <summary>¿Cuáles son mis derechos bajo el sistema de seguridad social?</summary>
                       <p class="p-faq">Los derechos de quienes pertenecen al sistema de seguridad social en México incluyen acceso a atención médica, pensiones por vejez, invalidez, y riesgos de trabajo, así como  prestaciones por maternidad y otros beneficios familiares.</p>
-                      <p class="p-faq">Estos derechos están garantizados por el IMSS e ISSSTE para trabajadores del sector privado y público, respectivamente</p>
+                      <p class="p-faq">Estos derechos están garantizados por el IMSS e ISSSTE para trabajadores del sector privado y público, respectivamente.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
