--- a/s-fiscal.html
+++ b/s-fiscal.html
@@ -187,7 +187,7 @@
         <a href="https://api.whatsapp.com/send?phone=5581030007" target="_blank">
         <img src="assets/img/whatsapp.png"></a>
       </div>
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">AGAA</strong> <span>Todos los Derechos Reservados</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">AGGA</strong> <span>Todos los Derechos Reservados</span></p>
     </div>
 
   </footer>
