--- a/s-medico.html
+++ b/s-medico.html
@@ -159,7 +159,7 @@
       <img src="assets/img/whatsapp.png"></a>
     </div>
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">AGAA</strong> <span>Todos los Derechos Reservados</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">AGGA</strong> <span>Todos los Derechos Reservados</span></p>
     </div>
   </footer>
 
