--- a/s-laboral.html
+++ b/s-laboral.html
@@ -231,7 +231,7 @@
       <img src="assets/img/whatsapp.png"></a>
     </div>
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">AGGA</strong> <span>Todos los Derechos Reservados</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename color">AGAA</strong> <span>Todos los Derechos Reservados</span></p>
     </div>
   </footer>
 
